out.txt
C:\AcademiX\src\main\java\com\example\academix\service\UserPostService.java:39: error: incompatible types: Date cannot be converted to LocalDateTime
        userPost.setEndDate(userPostRequest.getEndDate());
                                                      ^
C:\AcademiX\src\main\java\com\example\academix\service\UserPostService.java:67: error: incompatible types: LocalDateTime cannot be converted to Date
        userPostResponse.setEndDate(userPost.getEndDate());
                                                       ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler output below.
  C:\AcademiX\src\main\java\com\example\academix\service\UserPostService.java:39: error: incompatible types: Date cannot be converted to LocalDateTime
          userPost.setEndDate(userPostRequest.getEndDate());
                                                        ^
  2 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to get full insights from a Build Scan (powered by Develocity).

BUILD FAILED in 16s
